@@ -19,3 +19,9 @@ after    79.3 MB
 
 Undoing recruits without random traits is no longer possible.
 
+There has been more change in the animation engine. The only expected impact is
+that mvt anims don't "slow down" on hard to cross terrain anymore. If you had 
+specially crafted WML taking that into account, beware.
+
+If the mvt animations seem to "jump around" on slow or fast computers, please report
+to Boucman
